--- a/style/style.less
+++ b/style/style.less
@@ -1,8 +1,15 @@
 @light-green: #b2dd4c;
+@mid-green: darken(@light-green, 10%);
+
 @light-gray: #f5f5f5;
+@mid-gray: darken(@light-gray, 10%);
 @dark-gray: darken(@light-gray, 50%);
-@radius: 3px;
+
+@button-radius: 3px;
+
 @base-font-size: 12pt;
+@headers-font-family: "Raleway";
+@section-header-font-size: @base-font-size * 2;
 
 * {
   padding: 0;
@@ -15,7 +22,7 @@
   font-weight: bold;
   font-size: @base-font-size;
   padding: 15px 35px;
-  border-radius: @radius;
+  border-radius: @button-radius;
   border: none;
   text-transform: uppercase;
   margin-right: 15px;
@@ -29,17 +36,17 @@
   background-color: @light-green;
   border: 2px solid @light-green;
   &:hover {
-    background-color: darken(@light-green, 10%);
-    border: 2px solid darken(@light-green, 10%);
+    background-color: @mid-green;
+    border: 2px solid @mid-green;
   }
 }
 
 .white-gray-button {
   color: @dark-gray;
   background-color: @light-gray;
-  border: 2px solid darken(@light-gray, 10%);
+  border: 2px solid @mid-gray;
   &:hover {
-    background-color: darken(@light-gray, 10%);
+    background-color: @mid-gray;
   }
 }
 
@@ -55,15 +62,13 @@ svg polygon {
 }
 
 /* Header Section Styling*/
-.header-background {
+
+#site-header {
+  position: relative;
   background-image: url(../assets/photos/background.jpg);
   background-repeat: no-repeat;
   background-position: right top;
   background-size: 100% 100%;
-}
-
-#site-header {
-  position: relative;
   #navigation-bar {
     display: flex;
     justify-content: space-between;
@@ -86,7 +91,7 @@ svg polygon {
           color: white;
           background-color: @light-green;
           cursor: pointer;
-          border-radius: @radius;
+          border-radius: @button-radius;
         }
       }
 
@@ -107,7 +112,7 @@ svg polygon {
           text-align: center;
           right: 3px;
           top: 2px;
-          border-radius: @radius;
+          border-radius: @button-radius;
         }
       }
 
@@ -123,7 +128,7 @@ svg polygon {
     h1 {
       font-weight: bolder;
       font-size: @base-font-size * 4;
-      font-family: "Raleway";
+      font-family: @headers-font-family;
       margin-bottom: 20px;
     }
 
@@ -141,7 +146,9 @@ svg polygon {
     text-align: center;
 
     h1 {
-      font-size: @base-font-size * 2;
+      font-family: @headers-font-family;
+      font-size: @section-header-font-size;
+      font-weight: bolder;
       margin: 20px 0;
     }
 
@@ -170,6 +177,8 @@ svg polygon {
       }
 
       h2 {
+        font-family: @headers-font-family;
+        font-weight: bolder;
         margin: 30px 0;
       }
 
@@ -194,7 +203,9 @@ svg polygon {
       margin-top: 150px;
 
       h1 {
-        font-size: @base-font-size * 2;
+        font-family: @headers-font-family;
+        font-size: @section-header-font-size;
+        font-weight: bolder;
         margin: 30px 0;
       }
 
@@ -249,7 +260,9 @@ svg polygon {
   #related-products-section-header {
     text-align: center;
     h1 {
-      font-size: @base-font-size * 2;
+      font-family: @headers-font-family;
+      font-size: @section-header-font-size;
+      font-weight: bolder;
       margin: 20px 0;
     }
 
@@ -275,7 +288,7 @@ svg polygon {
         grid-template-columns: 1fr 1fr;
         justify-items: center;
         padding: 1.5rem;
-        border: 2px solid darken(@light-gray, 10%);
+        border: 2px solid @mid-gray;
 
         span.price {
           font-size: @base-font-size - 3;
@@ -303,9 +316,9 @@ svg polygon {
         grid-template-columns: 1fr 1fr;
         button {
           background-color: white;
-          border: 2px solid darken(@light-gray, 10%);
+          border: 2px solid @mid-gray;
           padding: 1rem 1.5rem;
-          font-size: @base-font-size - 2;
+          font-size: 0.7rem;
           text-transform: uppercase;
           color: @dark-gray;
           font-weight: bold;
@@ -323,7 +336,7 @@ svg polygon {
 
           &:hover {
             cursor: pointer;
-            background-color: darken(@light-gray, 10%);
+            background-color: @mid-gray;
           }
         }
       }
